# ducktran

./: .gitignore  .pdm.toml  LICENSE  Makefile  README.md  pyproject.toml
src/: config.py  constants.py  duck.py  ducktran.py  lake.py  pg.py  sql.py
