[tool.pdm]

[project]
name = "ducktran"
version = "0.1.0"
description = "Replicate data from Postgres to a Parquet-based data lake."
authors = [
    {name = "Jake Thomas", email = "jake@silverton.io"},
]
dependencies = [
    "duckdb>=0.6.1",
    "click>=8.1.3",
    "pydantic>=1.10.4",
    "loguru>=0.6.0",
    "psycopg2>=2.9.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "black>=22.12.0",
    "pylint>=2.15.10",
    "ipython>=8.9.0",
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
